# sway-ubuntu-deb-build

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  Vagrantfile
network-manager-applet/: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.glib  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.meson  config.status  configure  configure.ac  libnma-decl-list.txt  libnma-decl.txt  libnma-docs.xml  libnma-sections.txt  libnma-undocumented.txt  libnma-unused.txt  libnma.args  libnma.hierarchy  libnma.interfaces  libnma.prerequisites  libnma.signals  libnma.types  libtool  ltmain.sh  meson_options.txt  meson_post_install.py  nm-applet.desktop  nm-applet.desktop.in  nm-connection-editor.appdata.xml  nm-connection-editor.appdata.xml.in  nm-connection-editor.desktop  nm-connection-editor.desktop.in  org.gnome.nm-applet.gschema.xml.in
network-manager-applet/.libs/: libnma-scan
network-manager-applet/autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
network-manager-applet/debian/: ..gitignore.swp  .gitignore  autoreconf.after  autoreconf.before  changelog  control  debhelper-build-stamp  files  gbp.conf  libnma-dev.install  network-manager-gnome.install  network-manager-gnome.substvars  rules  watch
network-manager-applet/debian/patches/: Allow-creation-of-connections-without-admin-privileges.patch  Allow-to-create-and-connect-to-Ad-Hoc-RSN-networks.patch  Force-online-state-with-unmanaged-devices.patch  Make-policykit-restricted-actions-insensitive.patch  Support-hiding-rather-than-desensitizing-disallowed-items.patch  applet-wifi-menu-before-vpn.patch  git_desktop_category.patch  git_password_entry.patch  git_wrong_free.patch  hide_unmanaged_interfaces.patch  lp341684_device_sensitive_disconnect_notify.patch  lp460144_correctly_update_notification.patch  series
network-manager-applet/html/: NMABarCode.html  NMACertChooser.html  NMAMobileProvidersDatabase.html  NMAMobileWizard.html  NMAVpnPasswordDialog.html  NMAWifiDialog.html  annotation-glossary.html  api-index-1.8.0.html  api-index-full.html  api-reference.html  deprecated-api-index.html  index.html  libnma-nma-mobile-wizard.html  libnma-nma-ui-utils.html  libnma.devhelp2  object-tree.html
network-manager-applet/m4/: glib-makefile.m4
network-manager-applet/man/: nm-applet.1  nm-applet.1.in  nm-connection-editor.1  nm-connection-editor.1.in
network-manager-applet/po/: .intltool-merge-cache  ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  af.gmo  af.po  an.gmo  an.po  ar.gmo  ar.po  as.gmo  as.po  ast.gmo  ast.po  be.gmo  be.po  be@latin.gmo  be@latin.po  bg.gmo  bg.po  bn_IN.gmo  bn_IN.po  bs.gmo  bs.po  ca.gmo  ca.po  ca@valencia.gmo  ca@valencia.po  crh.gmo  crh.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  (+131 more)
network-manager-applet/shared/: nm-default.h  nm-libnm-compat.h
network-manager-applet/shared/nm-utils/: nm-compat.c  nm-glib.h  nm-macros-internal.h  nm-shared-utils.c  nm-shared-utils.h  nm-test-utils.h  nm-vpn-editor-plugin-call.h  src_utils_libutils_libnm_glib_la-nm-shared-utils.lo  src_utils_libutils_libnm_la-nm-shared-utils.lo
network-manager-applet/src/: 8021x.ui  ap-menu-item.c  ap-menu-item.h  applet-agent.c  applet-agent.h  applet-device-broadband.c  applet-device-broadband.h  applet-device-bt.c  applet-device-bt.h  applet-device-ethernet.c  applet-device-ethernet.h  applet-device-wifi.c  applet-device-wifi.h  applet-dialogs.c  applet-dialogs.h  applet-resources.c  applet-resources.h  applet-vpn-request.c  applet-vpn-request.h  applet.c  applet.gresource.xml  applet.h  ethernet-dialog.c  ethernet-dialog.h  fallback-icon.h  gsm-unlock.ui  info.ui  main.c  mb-menu-item.c  mb-menu-item.h  mobile-helpers.c  mobile-helpers.h  nm-applet
network-manager-applet/src/.libs/: nm-applet
network-manager-applet/src/connection-editor/: ce-ip4-routes.ui  ce-ip6-routes.ui  ce-new-connection.ui  ce-page-bluetooth.ui  ce-page-bond.ui  ce-page-bridge-port.ui  ce-page-bridge.ui  ce-page-dcb.ui  ce-page-dsl.ui  ce-page-ethernet.ui  ce-page-general.ui  ce-page-infiniband.ui  ce-page-ip-tunnel.ui  ce-page-ip4.ui  ce-page-ip6.ui  ce-page-macsec.ui  ce-page-mobile.ui  ce-page-ppp.ui  ce-page-proxy.ui  ce-page-team-port.ui  ce-page-team.ui  ce-page-vlan.ui  ce-page-wifi-security.ui  ce-page-wifi.ui  ce-page-wireguard.ui  ce-page.c  ce-page.h  ce-polkit-button.c  ce-polkit-button.h  ce-polkit.c  ce-polkit.h  ce-ppp-auth-methods.ui  ce-resources.h  ce-utils.c  ce-utils.h  ce.gresource.xml  connection-helpers.c  connection-helpers.h  ip4-routes-dialog.c  ip4-routes-dialog.h  (+64 more)
network-manager-applet/src/libnm-gtk/: NMGtk-1.0.gir  NMGtk-1.0.typelib  check-exports.sh  init.c  libnm-gtk.la  libnm-gtk.pc  libnm-gtk.pc.in  libnm-gtk.ver  libnm_gtk_la-init.lo  libnm_gtk_la-nm-mobile-providers.lo  libnm_gtk_la-nm-mobile-wizard.lo  libnm_gtk_la-nm-resources.lo  libnm_gtk_la-nm-ui-utils.lo  libnm_gtk_la-nm-vpn-password-dialog.lo  libnm_gtk_la-nm-wifi-dialog.lo  libnm_gtk_la-nm-wireless-dialog.lo  nm-cert-chooser.h  nm-mobile-providers.c  nm-mobile-providers.h  nm-mobile-wizard.c  nm-mobile-wizard.h  nm-resources.c  nm-resources.h  nm-ui-utils.c  nm-ui-utils.h  nm-vpn-password-dialog.c  nm-vpn-password-dialog.h  nm-wifi-dialog.c  nm-wifi-dialog.h  nm-wireless-dialog.c  nm-wireless-dialog.h  nm.gresource.xml  wifi.ui
network-manager-applet/src/libnma/: NMA-1.0.gir  NMA-1.0.typelib  init.c  libnm_gtk_libnm_gtk_la-nma-cert-chooser.lo  libnm_gtk_libnm_gtk_la-nma-file-cert-chooser.lo  libnma-gtk4.pc  libnma-gtk4.pc.in  libnma.la  libnma.pc  libnma.pc.in  libnma.ver  libnma_la-init.lo  libnma_la-nma-bar-code-widget.lo  nma-bar-code-widget.c  (+47 more)
network-manager-applet/xml/: annotation-glossary.xml  api-index-1.8.0.xml  api-index-1.8.22.xml  api-index-deprecated.xml  api-index-full.xml  gtkdocentities.ent  libnma-doc.bottom  nma-bar-code-widget.xml  nma-bar-code.xml  nma-cert-chooser.xml  nma-mobile-providers.xml  nma-mobile-wizard.xml  nma-ui-utils.xml  nma-vpn-password-dialog.xml  nma-wifi-dialog.xml  object_index.sgml  qrcodegen.xml  tree_index.sgml
(+253 files in other folders)
